addons/kyverno/policies/betting-slots_no_losses_disguised_as_wins-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: betting-slots_no_losses_disguised_as_wins
  annotations:
    rulehub.id: betting.slots_no_losses_disguised_as_wins
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: betting.slots_no_losses_disguised_as_wins: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
